login,forget password,signup,menu Note : there is gradle error!

--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -21,4 +21,29 @@
     <string name="conn_error">Connection error occurred, try again later</string>
     <string name="unhandled_error">Unhandled Error</string>
 
+<!--Login-->
+    <string name="login_forget_pass">Forget Password</string>
+    <string name="login_login">Login</string>
+    <string name="login_signup">Sign Up</string>
+    <string name="email_address">Email Address</string>
+    <string name="password">Password</string>
+
+<!--sign up-->
+    <string name="sign_up_registeration_url">http://secb.linkdev.com/en/Pages/QuickRegistration.aspx</string>
+    <string name="lost_connection">The connection is lost !</string>
+
+<!--reset password-->
+    <string name="resetPassword">Reset Password</string>
+
+<!--menu-->
+    <string name="home">Home</string>
+    <string name="eservices">E-Services</string>
+    <string name="news">News</string>
+    <string name="eguide">E-Guide</string>
+    <string name="events">Events</string>
+    <string name="images">Images</string>
+    <string name="videos">Videos</string>
+    <string name="aboutus">About Us</string>
+    <string name="contactus">Contac Us</string>
+
 </resources>
