--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -17,14 +17,28 @@
 <!--reset password-->
     <string name="resetPassword">ارسال الرابط</string>
 
-<!--menu-->
-    <string name="home">Home</string>
-    <string name="eservices">E-Services</string>
-    <string name="news">News</string>
-    <string name="eguide">E-Guide</string>
-    <string name="events">Events</string>
-    <string name="images">Images</string>
-    <string name="videos">Videos</string>
-    <string name="aboutus">About Us</string>
-    <string name="contactus">Contac Us</string>
+<!--menu_layout-->
+    <string name="home">الرئيسية</string>
+    <string name="eservices">الخدمات الالكترونية</string>
+    <string name="news">الاخبار</string>
+    <string name="eguide">الأدلة الإرشادية</string>
+    <string name="events">الفعاليات</string>
+    <string name="images">الصور</string>
+    <string name="videos">الافلام</string>
+    <string name="aboutus">عنا</string>
+    <string name="contactus">اتصل بنا</string>
+    <string name="services_requests">الطلبات الخدمية</string>
+    <string name="last_news">أخر الأخبار</string>
+
+    <string name="graph_title_closed">
+        <![CDATA[طلبات<br/><strong>مغلقة</strong> ]]>
+    </string>
+    <string name="graph_title_inbox">
+        <![CDATA[<strong>مهامي</strong> ]]>
+    </string>
+    <string name="graph_title_inProgress">
+        <![CDATA[طلبات<br/><strong>قيد الاجراء</strong> ]]>
+    </string>
+
+    <string name="view_all_news">عرض الكل</string>
 </resources>
