--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="news_filter_political_type">Political Type</string>
     <string name="news_filter_public_type">Public Type</string>
     <string name="filters_apply_filter">Apply Filters</string>
+    <string name="news_details">News Details</string>
 
 </resources>
