--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -51,4 +51,15 @@
     <string name="news_filter_public_type">عام</string>
     <string name="filters_apply_filter">اجراء</string>
     <string name="news_details">تفاصيل الخبر</string>
+    <string name="filter_city">City</string>
+    <string name="filter_time_starts">Starts</string>
+    <string name="filter_time_ends">Ends</string>
+    <string name="event_details">Event Details</string>
+    <string name="location_eguide">Location E-Guide</string>
+    <string name="organizers_eguide">organizers_eguide</string>
+    <string name="filter_organizer_name">Organizer Name</string>
+    <string name="address">Address</string>
+    <string name="phone">Phone Number</string>
+    <string name="website">Website</string>
+    <string name="organizer_details">Organizers Details</string>
 </resources>
