done: organizer's E-guide (list-details-filter) issues: -apply fonts -filter radioButtom -filter arabic -filter out of dark area click -filter max line -Open event details from home -Map reload -menu open same item -menu open home -tool bar back button

--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -51,15 +51,26 @@
     <string name="news_filter_public_type">عام</string>
     <string name="filters_apply_filter">اجراء</string>
     <string name="news_details">تفاصيل الخبر</string>
-    <string name="filter_city">City</string>
-    <string name="filter_time_starts">Starts</string>
-    <string name="filter_time_ends">Ends</string>
+    <string name="filter_city">المدينة: </string>
+    <string name="filter_time_starts">البداية</string>
+    <string name="filter_time_ends">النهاية</string>
     <string name="event_details">Event Details</string>
     <string name="location_eguide">Location E-Guide</string>
     <string name="organizers_eguide">organizers_eguide</string>
     <string name="filter_organizer_name">Organizer Name</string>
-    <string name="address">Address</string>
-    <string name="phone">Phone Number</string>
-    <string name="website">Website</string>
+    <string name="address">العنوان:</string>
+    <string name="phone">رقم التليفون:</string>
+    <string name="website">الموقع الالكتروني:</string>
     <string name="organizer_details">Organizers Details</string>
+    <string name="location_capacityTitle">السعة:</string>
+    <string name="location_spaceTitle">المساحة:</string>
+    <string name="filter_location_name">اسم الموقع:</string>
+    <string name="filter_total_capacity">اجمالي السعة:</string>
+    <string name="location_nameTitle">الاسم:</string>
+    <string name="location_roomType">نوع الغرفة:</string>
+    <string name="location_roomCapacity">سعة الغرفة:</string>
+    <string name="location_roomSpace">مساحة الغرفة:</string>
+    <string name="location_roomCountTitle">عدد الغرف:</string>
+    <string name="locationsList">Locations List</string>
+    <string name="location_details">Location Details</string>
 </resources>
