--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -73,4 +73,5 @@
     <string name="location_roomCountTitle">عدد الغرف:</string>
     <string name="locationsList">Locations List</string>
     <string name="location_details">Location Details</string>
+    <string name="view_all_events">View All Events</string>
 </resources>
