Done : -news categories -news list+ filter -news details
-Cache Lists.
NOTE :
-lists are cached in Memory only(using Manager class)
-not cached in SD card .

--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -136,4 +136,6 @@
     <string name="gallery_no_albums">لاتوجد البومات.</string>
     <string name="album_no_files">لا توجد ملفات.</string>
     <string name="login_failed">برجاء مراجعة اسم المستخدم و كلمة المرور.</string>
+    <string name="news_no_news">لا توجد اخبار.</string>
+    <string name="details_no_details">لا توجد تفاصيل .</string>
 </resources>
