1-grey placeholders instead of colored ones. 2-added space to the top of menu. 3-changing the custom loading dialog to the default . 4-resizing image to fit the title at the  news details , location details and organization details pages. 5- fix video list loading and news images loading .

--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -5,6 +5,8 @@
     <string name="error_empty_email">يجب ادخال عنوان البريد الالكتروني بشكل صحيح</string>
     <string name="error_empty_password">يجب ادخال كلمة المرور بشكل صحيح</string>
     <string name="password_reset_done">يرجي مراجعة صندوق البريد الالكتروني</string>
+    <string name="attention">انتباه</string>
+    <string name="conn_error">خطأ ف الاتصال!</string>
     <string name="loading">جاري التحميل..</string>
     <string name="ok">موافق</string>
     <string name="cancel">الغاء</string>
