--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="error_empty_email">Email address should be entered correctly</string>
     <string name="error_empty_password">Password should be entered correctly</string>
     <string name="error_request_time_out">Timeout, please make sure of your internet connection</string>
-    <string name="password_reset_done">Please check your email inbox.</string>
+    <!--<string name="password_reset_done">Please check your email inbox.</string>-->
+    <string name="password_reset_done">Password reset message is sent to %s . Please check your inbox.</string>
     <string name="loading">Loading..</string>
     <string name="wait_moment">Please wait a moment..</string>
     <string name="error">Error</string>
@@ -153,9 +154,10 @@
     <string name="login_failed">Login failed . Please check the user name and the password</string>
     <string name="news_no_news">There are  no news</string>
     <string name="details_no_details">There are no details</string>
-    <string name="news_no_categories">There are no categories</string>
+    <string name="news_no_types">There are no types</string>
     <string name="events_no_events">There are no events</string>
     <string name="event_all_day">All Day Event</string>
     <string name="event_repeated">Repeated</string>
     <string name="eservices_form">E-service Forms</string>
+    <string name="locations_no_locations">There are no locations</string>
 </resources>
