--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -160,4 +160,5 @@
     <string name="event_repeated">Repeated</string>
     <string name="eservices_form">E-service Forms</string>
     <string name="locations_no_locations">There are no locations</string>
+    <string name="organizer_no_organizers">There are no organizers.</string>
 </resources>
