--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -152,6 +152,7 @@
     <string name="event_repeated">متكرر</string>
     <string name="locations_no_locations">لا توجد مواقع.</string>
     <string name="organizer_no_organizers">لا يوجد منظمين.</string>
+    <string name="contact_us_done">تم ارسال بياناتكم بنجاح.</string>
 
 
 </resources>
