--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
         <![CDATA[<strong>In Progress</strong> <br/>Requests]]>
     </string>
     <string name="view_all_news">View All News</string>
-    <string name="filter_type">Type</string>
+    <string name="filter_type">By Type</string>
     <string name="filter_time">Time</string>
     <string name="filter_time_from">From</string>
     <string name="filter_time_to">To</string>
@@ -80,7 +80,7 @@
     <string name="filter_category">Category</string>
     <string name="event_details">Event Details</string>
     <string name="location_eguide">Location E-Guide</string>
-    <string name="organizers_eguide">Organizer\'s E-Guide</string>
+    <string name="organizers_eguide">Organizers E-Guide</string>
     <string name="filter_organizer_name">Organizer Name</string>
     <string name="address">Address:</string>
     <string name="phone">Phone Number</string>
@@ -90,7 +90,8 @@
     <string name="location_spaceTitle">Space:</string>
     <string name="filter_location_name">Location Name</string>
     <string name="filter_total_capacity">Total Capacity</string>
-    <string name="location_nameTitle">Name</string>
+    <string name="location_nameTitle">Name:</string>
+    <string name="location_type_title">Type:</string>
     <string name="location_roomType">Room Type</string>
     <string name="location_roomCapacity">Room Capacity</string>
     <string name="location_roomSpace">Room Space</string>
@@ -162,4 +163,12 @@
     <string name="locations_no_locations">There are no locations</string>
     <string name="organizer_no_organizers">There are no organizers.</string>
     <string name="contact_us_done">Your data sent successfully .</string>
+
+    <string name="years">Years</string>
+    <string name="months">Months</string>
+    <string name="weeks">Weeks</string>
+    <string name="days">Days</string>
+    <string name="hours">Hours</string>
+    <string name="minutes">Minutes</string>
+    <string name="ago">Ago</string>
 </resources>
