--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -155,6 +155,7 @@
     <string name="locations_no_locations">لا توجد مواقع.</string>
     <string name="organizer_no_organizers">لا يوجد منظمين.</string>
     <string name="contact_us_done">تم ارسال بياناتكم بنجاح.</string>
+    <string name="news_no_status">لا توجد حالات.</string>
 
     <string name="years">سنوات</string>
     <string name="months">شهور</string>
