--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -172,4 +172,5 @@
     <string name="hours">Hours</string>
     <string name="minutes">Minutes</string>
     <string name="ago">Ago</string>
+    <string name="news_no_status">There are no Status</string>
 </resources>
