youtube player done

--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -165,6 +165,7 @@
     <string name="hours">ساعات</string>
     <string name="minutes">دقائق</string>
     <string name="ago">منذ</string>
+    <string name="error_player">لا يمكن تشغيل هذا الملف</string>
 
 
 </resources>
