--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -161,7 +161,7 @@
     <string name="events_no_events">There are no events</string>
     <string name="event_all_day">All Day Event</string>
     <string name="event_repeated">Repeated</string>
-    <string name="eservices_form">E-service Forms</string>
+    <string name="eservices_form">E-service Form</string>
     <string name="locations_no_locations">There are no locations</string>
     <string name="organizer_no_organizers">There are no organizers.</string>
     <string name="contact_us_done">Your data sent successfully .</string>
@@ -175,4 +175,5 @@
     <string name="ago">Ago</string>
     <string name="news_no_status">There are no Status</string>
     <string name="error_player">Can\'t Play This Video</string>
+    <string name="eservices_no_eservices">There are no E-services.</string>
 </resources>
