--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -4,6 +4,12 @@
     <string name="error_invalid_password">كلمة المرور غير صحيحة</string>
     <string name="error_empty_email">يجب ادخال عنوان البريد الالكتروني بشكل صحيح</string>
     <string name="error_empty_password">يجب ادخال كلمة المرور بشكل صحيح</string>
+    <string name="error_empty_userName">يجب ادخال اسم المستخدم بشكل صحيح</string>
+    <string name="error_empty_mobile">يجب ادخال رقم الجوال بشكل صحيح</string>
+    <string name="error_empty_organization">يجب ادخال المنظمة بشكل صحيح</string>
+    <string name="error_empty_job">يجب ادخال اللقب الوظيفي بشكل صحيح</string>
+    <string name="error_empty_subject">يجب ادخال الموضوع بشكل صحيح</string>
+
     <!--<string name="password_reset_done">يرجي مراجعة صندوق البريد الالكتروني</string>-->
     <string name="password_reset_done">تم ارسال رساله اعادة ضبط كلمة المرور الي %s . يرجي التوجه الي صندوق البريد الالكتروني</string>
     <string name="attention">انتباه</string>
