--- a/SECB/app/src/main/res/values/strings.xml
+++ b/SECB/app/src/main/res/values/strings.xml
@@ -8,6 +8,12 @@
     <string name="error_empty_email">Email address should be entered correctly</string>
     <string name="error_empty_password">Password should be entered correctly</string>
     <string name="error_request_time_out">Timeout, please make sure of your internet connection</string>
+    <string name="error_empty_userName">User name should be entered correctly</string>
+    <string name="error_empty_mobile">Mobile number should be entered correctly</string>
+    <string name="error_empty_organization">Organization number should be entered correctly</string>
+    <string name="error_empty_job">Job number should be entered correctly</string>
+    <string name="error_empty_subject">Subject number should be entered correctly</string>
+
     <!--<string name="password_reset_done">Please check your email inbox.</string>-->
     <string name="password_reset_done">Password reset message is sent to %s . Please check your inbox.</string>
     <string name="loading">Loading..</string>
