Link feedback 18 November2015 on Handsets

--- a/SECB/app/src/main/res/values-ar/strings.xml
+++ b/SECB/app/src/main/res/values-ar/strings.xml
@@ -23,6 +23,7 @@
     <string name="login_login">دخول</string>
     <string name="login_signup">حساب جديد</string>
     <string name="email_address">البريد الالكتروني</string>
+    <string name="email_address_">البريد الالكتروني :</string>
     <string name="username">اسم المستخدم</string>
     <string name="password">كلمة السر</string>
 
@@ -78,8 +79,9 @@
     <string name="location_eguide">المواقع</string>
     <string name="organizers_eguide">المنظمين</string>
     <string name="filter_organizer_name">اسم المنظم:</string>
-    <string name="address">العنوان:</string>
+    <string name="address_">العنوان:</string>
     <string name="phone">رقم التليفون:</string>
+    <string name="phone_">رقم التليفون:</string>
     <string name="website">الموقع الالكتروني:</string>
     <string name="organizer_details">بيانات المنظم</string>
     <string name="location_capacityTitle">السعة:</string>
